Fixed the side panel contents cutoff issue

--- a/cccm-frontend/src/assets/css/overrides.css
+++ b/cccm-frontend/src/assets/css/overrides.css
@@ -206,7 +206,7 @@ label.col-form-label {
 .crna-right-sticky-panel {
     display: flex;
     flex-direction: column;
-    height: 50vh;
+    margin: 0 0 50px 0;
 }
 
 .crna-right-panel-button-container {
@@ -222,7 +222,6 @@ label.col-form-label {
 
 .crna-right-panel-details {
     flex:100%;
-
 }
 
 .rna-formio-h1 {
@@ -296,41 +295,7 @@ p[ref="html"]:not(.crna-subSectionTitleClass):not(.subSectionChildTitleClass):no
     border: 1px solid #ccc;
 }
 
-/* SARA CMP styles - Todo split to own file */
-
-.sara-cmp-form .divTableRowNav {
-    white-space: nowrap;
-}
-
-.sara-cmp-form .menuR2 {
-    overflow: scroll!important;
-    -ms-overflow-style: none;  /* IE and Edge */
-    scrollbar-width: none;  /* Firefox */
-}
-.sara-cmp-form .menuR2::-webkit-scrollbar {
-    display: none;
-}
-.sara-cmp-form .client-details {
-    margin-top: 130px;
-}
-
-.sara-cmp-form .card {
-    margin-bottom: 40px!important;
-}
-.sara-cmp-form .card-header {
-    background-color:#38598A!important;
-}
-
-.sara-cmp-form .formio-component-key_sourceContacted_content {
-    margin: 20px 0;
-}
-
-.sara-cmp-form .formio-component-key_buttonGroup {
-    height:150px;
-    align-items:center;
-}
 /* Dashboard Styles - TODO split to own file */
-
 .dashboard-po th[role="columnheader"]{
     text-align: center;
 }
